--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -4,5 +4,7 @@ scroll-behavior: smooth;
 }
 
 li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
+    line-height: 1.25rem;
+    font-size: 14px;
 }
