Finished feedback components and cleaned up menu bars, etc.

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -8,3 +8,12 @@ li {
     line-height: 1.25rem;
     font-size: 14px;
 }
+
+a {
+    color: deeppink !important;
+    text-decoration: none;
+}
+
+a:hover {
+    color: cyan !important;
+}
