--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -3,7 +3,7 @@ background-color: #141114;
 scroll-behavior: smooth;
 }
 
-li {
+li, ul, ol {
     margin-bottom: 0.25rem;
     line-height: 1.25rem;
     font-size: 14px;
