--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,12 +1,13 @@
+
 html, body {
 background-color: #141114;
 scroll-behavior: smooth;
 }
 
-li, ul, ol {
+li, ul, ol, p {
     margin-bottom: 0.25rem;
     line-height: 1.25rem;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 a {
