--- a/app/styles/codeMarkdown.css
+++ b/app/styles/codeMarkdown.css
@@ -8,6 +8,7 @@ pre code.hljs {
 code.hljs {
     padding: 10px 15px 10px 25px !important;
         margin: 0 auto !important;
+        margin-top: 10px !important;
         font-size: 12px !important;
         border-radius: 4px !important;
         max-width: 600px !important;
