--- a/app/styles/codeMarkdown.css
+++ b/app/styles/codeMarkdown.css
@@ -6,7 +6,7 @@ pre code.hljs {
 }
 
 code.hljs {
-    padding: 10px 15px 10px 25px !important;
+    padding: 10px 20px 10px 20px !important;
         margin: 0 auto !important;
         margin-top: 5px !important;
         font-size: 12px !important;
@@ -15,7 +15,8 @@ code.hljs {
 }
 
 .hljs {
-    background: #011627;
+    /* background: #011627; */
+    background: #0A2338 !important;
     color: #d6deeb
 }
 
