--- a/app/styles/codeMarkdown.css
+++ b/app/styles/codeMarkdown.css
@@ -6,12 +6,13 @@ pre code.hljs {
 }
 
 code.hljs {
-    padding: 10px 20px 10px 20px !important;
+    padding: 15px !important;
         margin: 0 auto !important;
         margin-top: 5px !important;
         font-size: 12px !important;
         border-radius: 4px !important;
         max-width: 600px !important;
+        overflow:auto !important;
 }
 
 .hljs {
