--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -42,6 +42,12 @@ h2 {
     font-weight: 550;
 }
 
+h3 {
+    font-size: 1rem;
+    margin-bottom: 0.25rem;
+    font-weight: 550;
+}
+
 
 .grid {
     overflow:auto;
@@ -65,6 +71,7 @@ h2 {
         margin-bottom: 0.4rem;
 
     }
+
 }
 
 
