changed the entire color scheme

--- a/app/styles/codeMarkdown.css
+++ b/app/styles/codeMarkdown.css
@@ -43,7 +43,7 @@ code.hljs {
 
 .hljs {
     /* background: #011627; */
-    background: #0A2338 !important;
+    background: #383640 !important;
     color: #d6deeb
 }
 
